example2-kubernetes-terraform/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - name: nginx-http
    protocol: TCP
    port: 80
  selector:
    app: nginx
